2009-02-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSRulerView.m (+initialize): Correct version to be an integer.

2009-02-16  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Look for libpng/png.h
	* Source/NSBitmapImageRep+PNG.m: Use found loction of png.h
	(Fixes #24111).

2009-02-16 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSCell.m (-setStringValue): Try to fix bugs in last change.
	Optimize in case of common string and check for nil.

2009-02-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-setStringValue:, -setObjectValue:): Try to fix
	bugs in last change.

2009-02-15 22:21-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSOpenPanel.m: Corrects bug #25471.  Only enable
	the OK button when a file the application can open is selected.

2009-02-15 19:38-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSCell.m: Change to implement 10.3 and later behavior for
	the method setStringValue: as documented in Apple's documentation
	for the method.  This behavior was observed on Cocoa under 
	Mac OS 10.5.

2009-02-12 Riccardo Mottola <rmottola@users.sf.net>
	
	* Source/NSSavePanel.m: Return autoreleased copy of the directory
	string

2009-02-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/make_services.m: Fix error parsing CFBundleURLTypes

2009-02-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/make_services.m: Check applications for CFBundleURLTypes
	(see http://developer.apple.com/documentation/MacOSX/conceptual/BPRuntimeConfig/Articles/PListKeys.html)
	* Source/NSWorkspace.m: ([-openURL:]) try to open non-file URLs using
	an app found based on CFBundleURLTypes, and if that fails try to use
	any available 'OpenURL' service.

2009-02-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTheme.m: Fix typo in include
	* Source/NSTableView.m: Fix to compile with GC (reported by Lu Liyi)

2009-02-11 00:49-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSBundleAdditions.m: 