@@ -1,5 +1,10 @@
 2009-02-17 Fred Kiefer <FredKiefer@gmx.de>
 
+	* Source/NSMenu.m (-_organizeMenu): Try to better switch between
+	Apple menu layout and ours.
+
+2009-02-17 Fred Kiefer <FredKiefer@gmx.de>
+
 	* Source/NSRulerView.m (+initialize): Correct version to be an integer.
 
 2009-02-16  Adam Fedor  <fedor@gnu.org>
